--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="contato">Contato</a></li>
             </ul>
         </nav>
-        <img src="/Exemplo/imagens/logo.png" alt="Figura com o logo da empresa">
+        <img src="logo.png" alt="Figura com o logo da empresa">
         <div class="texto-cabecalho">
             <h1>
                 Lorem ipsum dolor <br>sit amet consectetur, adipisicing elit. </h1>
@@ -39,7 +39,7 @@
         <!--SOBRE-->
         <section id="sobre">
             <div class="sobre-col-esquerda">
-                <img src="/Exemplo/imagens/about.png" alt="figura com pessoas lendo ou carregando livros">
+                <img src="/about.png" alt="figura com pessoas lendo ou carregando livros">
             </div>
             <div class="sobre-col-direita">
                 <div class="sobre-texto">
@@ -62,17 +62,17 @@
             <div id="recursos-linha">
                 <div class="recursos-coluna">
                     <h4>Learn Anywhere</h4>
-                    <img src="imagens/pic-1.png" alt="figura de uma lampada">
+                    <img src="pic-1.png" alt="figura de uma lampada">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
                 <div class="recursos-coluna">
                     <h4>Expert Teachers</h4>
-                    <img src="imagens/pic-2.png" alt="figura de um cerebro na forma de uma nuvem">
+                    <img src="pic-2.png" alt="figura de um cerebro na forma de uma nuvem">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
                 <div class="recursos-coluna">
                     <h4>Unlimited Acess</h4>
-                    <img src="imagens/pic-3.png" alt="figura de um foguete">
+                    <img src="pic-3.png" alt="figura de um foguete">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 </form>
             </article>
             <article id="contato-coluna-direita">
-                <img src="./imagens/contact.png" alt="figura de pessoas segurando balões de fala">
+                <img src="contact.png" alt="figura de pessoas segurando balões de fala">
             </article>
 
 
@@ -112,7 +112,7 @@
 
                     <div class="footer-logo">
 
-                        <img src="imagens/logo.png" alt="figura do logo da empresa">
+                        <img src="logo.png" alt="figura do logo da empresa">
 
                         <button class="btn-comum">English</button>
 
